--- a/res/values/strings_pref_defaults.xml
+++ b/res/values/strings_pref_defaults.xml
@@ -2,5 +2,5 @@
 <resources>
 	<integer name="volume_step_size_default_value">10</integer>
 	<bool name="handle_back_hard_default">true</bool>
-	<bool name="keep_screen_on_default">true</bool>
+	<bool name="keep_screen_on_default">false</bool>
 </resources>
