--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,8 +2,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <TextView
+    android:layout_height="fill_parent"
+    android:background="@android:color/black">
+    <com.menny.android.boxeethumbremote.TitleTextView
 		android:id="@+id/textNowPlayingTitle"
 		android:text=""
 		android:layout_height="wrap_content"
@@ -12,8 +13,9 @@
 		android:maxLines="1"
    		android:marqueeRepeatLimit="marquee_forever"
    		android:ellipsize="marquee"
-   		android:textSize="24sp"
+   		android:textSize="18sp"
    		android:layout_alignParentTop="true"
+   		android:textColor="@android:color/white"
 		/>
 		
     <LinearLayout android:id="@+id/controls_layout" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal">
