--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@android:color/black">
-    <com.menny.android.boxeethumbremote.TitleTextView
+    <TextView
 		android:id="@+id/textNowPlayingTitle"
 		android:text=""
 		android:layout_height="wrap_content"
