refactoring Settings - does not compile at this time

--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -3,66 +3,54 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 			
     <PreferenceScreen
-        android:key="name"
+        android:key="servers_screen"
         android:title="Boxee Server"
         />
 	
 	<PreferenceCategory android:key="ux_group"
 	android:title="@string/ux_group">
-		<com.menny.android.thumbremote.ui.MySeekBarPreference  
-        android:key="sensitivity"
-        android:defaultValue="50"
-        android:title="@string/preference_sensitivity" 
-        />
+		
+		<ListPreference
+			android:key="@string/settings_key_swipe_sensitivity"
+			android:title="@string/preference_sensitivity"
+			android:summary="@string/preference_sensitivity_summary"
+			android:entries="@array/settings_key_swipe_sensitivity_texts"
+			android:entryValues="@array/settings_key_swipe_sensitivity_values"
+			android:defaultValue="@string/settings_key_swipe_sensitivity_default_value"
+			android:dialogTitle="@string/preference_sensitivity"/>
         
-        <com.menny.android.thumbremote.ui.MySeekBarPreference  
-        android:key="@string/volume_step_size_key"
-        android:defaultValue="@integer/volume_step_size_default_value"
-        android:title="@string/preference_volume_step_size" 
-        max="30"
-        min="1"
-        interval="1"
-        />
-        
+        <ListPreference
+			android:key="@string/settings_key_volume_step_size"
+			android:title="@string/preference_volume_step"
+			android:summary="@string/preference_volume_step_summary"
+			android:entries="@array/settings_key_volume_step_size_texts"
+			android:entryValues="@array/settings_key_volume_step_size_values"
+			android:defaultValue="@string/settings_key_volume_step_size_default_value"
+			android:dialogTitle="@string/preference_volume_step"/>
+			
         <CheckBoxPreference 
-		android:key="@string/handle_back_hard_key"
-		android:title="@string/handle_back_hard" 
-		android:summaryOn="@string/handle_back_hard_on"
-		android:summaryOff="@string/handle_back_hard_off" 
-		android:defaultValue="@bool/handle_back_hard_default"
+		android:key="@string/settings_key_handle_back_hard_key"
+		android:title="@string/preference_handle_back_hard" 
+		android:summaryOn="@string/preference_handle_back_hard_on"
+		android:summaryOff="@string/preference_handle_back_hard_off" 
+		android:defaultValue="@bool/settings_key_handle_back_hard_default"
 		/>
 		
 		<CheckBoxPreference 
-		android:key="@string/keep_screen_on_key"
+		android:key="@string/settings_key_keep_screen_on_key"
 		android:title="@string/keep_screen_on_title" 
 		android:summaryOn="@string/keep_screen_on_yes"
 		android:summaryOff="@string/keep_screen_on_no" 
-		android:defaultValue="@bool/keep_screen_on_default"
+		android:defaultValue="@bool/settings_key_keep_screen_on_default"
 		/>
-		<!-- 
-		<ListPreference
-			android:key="@string/screen_orientation_key"
-			android:title="@string/screen_orientation_title"
-			android:entries="@array/screen_orientation_types_strings"
-			android:entryValues="@array/screen_orientation_types_values"
-			android:dialogTitle="@string/screen_orientation_title"
-			android:defaultValue="@string/screen_orientation_default_value" />
-		 -->
 	</PreferenceCategory>
 	
 	<PreferenceCategory android:key="network_group"
 	android:title="@string/network_group">
-		<CheckBoxPreference 
-		android:key="require_wifi"
-		android:title="@string/require_wifi_title" 
-		android:summaryOn="@string/require_wifi_yes"
-		android:summaryOff="@string/require_wifi_no" 
-		android:defaultValue="true"
-		/>
 		<EditTextPreference 
-		android:key="timeout" 
-		android:title="@string/timeout_title"
-		android:summary="@string/timeout_summary"
+		android:key="@string/settings_key_network_timeout" 
+		android:title="@string/network_timeout_title"
+		android:summary="@string/network_timeout_summary"
 		android:defaultValue="2000"
 		/>
 	</PreferenceCategory>
