--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    
+    android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:orientation="vertical">
     
-    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8dp"
-    	android:text="@string/welcome_to_remote" android:textSize="24sp"/>
-    
-    <ScrollView android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1">
+    <ScrollView android:layout_width="wrap_content" android:layout_height="0px" android:layout_weight="1">
     	<LinearLayout 
 		    android:layout_width="fill_parent"
 		    android:layout_height="fill_parent"
