--- a/res/layout/notplaying.xml
+++ b/res/layout/notplaying.xml
@@ -3,8 +3,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/nowplayinginfo"
 	android:orientation="horizontal"
-	android:layout_height="fill_parent"
+	android:layout_height="wrap_content"
 	android:focusable="false"
-	android:layout_width="fill_parent">
+	android:layout_width="wrap_content">
 		
 </LinearLayout>
