--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,19 +17,6 @@
    		android:layout_alignParentTop="true"
    		android:textColor="@android:color/white"
 		/>
-	<TextView
-		android:id="@+id/textMessages"
-		android:text=""
-		android:layout_height="wrap_content"
-		android:layout_width="fill_parent" 
-		android:gravity="center"
-		android:maxLines="1"
-   		android:marqueeRepeatLimit="marquee_forever"
-   		android:ellipsize="marquee"
-   		android:textSize="13sp"
-   		android:layout_below="@id/textNowPlayingTitle"
-   		android:textColor="@android:color/white"
-		/>
    		
     <LinearLayout android:id="@+id/controls_layout" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal">    		
 		<Button 
@@ -55,9 +42,27 @@
 		android:src="@drawable/remote_background"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@id/textMessages"
+		android:layout_below="@id/textNowPlayingTitle"
 		android:layout_above="@id/controls_layout"
 		android:layout_margin="4dp"
+		/>
+		
+		
+	<TextView
+		android:id="@+id/textMessages"
+		android:text=""
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content" 
+		android:gravity="center"
+		android:maxLines="1"
+   		android:marqueeRepeatLimit="marquee_forever"
+   		android:ellipsize="marquee"
+   		android:textSize="13sp"
+   		android:layout_centerInParent="true"
+   		android:textColor="@android:color/white"
+   		android:background="@drawable/message_background"
+   		android:padding="8dp"
+   		android:visibility="invisible"
 		/>
 		
 </RelativeLayout>
