--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,25 +17,11 @@
    		android:layout_alignParentTop="true"
    		android:textColor="@android:color/white"
 		/>
-   		
-    <LinearLayout android:id="@+id/controls_layout" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal">    		
-		<Button 
-			android:id="@+id/back" 
-			android:background="@drawable/back"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:layout_margin="10dp" 
-			/>
-			
-		<ViewFlipper
-	        android:id="@+id/now_playing_flipper"
-	        android:layout_width="fill_parent" 
-	        android:layout_height="fill_parent"
-	        >
-	    	<include layout="@layout/notplaying" />
-	        <include layout="@layout/nowplaying" />
-		</ViewFlipper>
-	</LinearLayout>
+   	
+   	<include layout="@layout/media_control_buttons"
+   		android:id="@+id/controls_layout"
+		android:layout_alignParentBottom="true" 
+		android:layout_height="wrap_content" android:layout_width="fill_parent"/>
 	
 	<ImageView
 		android:id="@+id/thumbnail"
@@ -48,22 +34,11 @@
 		/>
 		
 		
-	<TextView
-		android:id="@+id/textMessages"
-		android:text=""
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content" 
-		android:gravity="center"
-		android:maxLines="1"
-   		android:marqueeRepeatLimit="marquee_forever"
-   		android:ellipsize="marquee"
-   		android:textSize="13sp"
+		
+	<include layout="@layout/messages"
    		android:layout_centerInParent="true"
-   		android:textColor="@android:color/white"
-   		android:background="@drawable/message_background"
-   		android:padding="8dp"
-   		android:visibility="invisible"
-		/>
+		android:layout_height="wrap_content"
+		android:layout_width="fill_parent" />
 		
 </RelativeLayout>
     
