--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -18,43 +18,43 @@
    		android:textColor="@android:color/white"
 		/>
 	
-	<ImageView
-		android:id="@+id/thumbnail"
-		android:src="@drawable/remote_background"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:scaleType="centerInside"
-		android:adjustViewBounds="true"
+	<LinearLayout android:orientation="horizontal"
+		android:layout_width="fill_parent" android:layout_height="fill_parent"
+		android:weightSum="5"
 		android:layout_below="@id/textNowPlayingTitle"
 		android:layout_alignParentBottom="true"
-		android:layout_alignParentRight="true"
-		android:layout_margin="4dp"/>
-		
-	<LinearLayout android:id="@+id/controls_layout"
-    	android:layout_below="@id/textNowPlayingTitle"
-    	android:layout_alignParentBottom="true" 
-		android:layout_alignParentLeft="true"
-		android:layout_toLeftOf="@id/thumbnail"
-		android:weightSum="1"
-    	android:layout_height="fill_parent" android:layout_width="wrap_content" android:orientation="vertical">
-    	
-    	<ScrollView 
-    		android:layout_height="0px"
-			android:layout_weight="1"
-			android:layout_width="fill_parent">
-			<TextView
-				android:id="@+id/textMediaDetails"
-				android:text=""
-				android:layout_height="fill_parent"
-				android:layout_width="fill_parent"
-		   		android:textSize="14sp"
-		   		android:textColor="@android:color/white"
-				/>
-   		</ScrollView>
-	   	<include layout="@layout/media_control_buttons"
-			android:layout_height="wrap_content" android:layout_width="fill_parent"/>
+		>
+		<LinearLayout android:id="@+id/controls_layout"
+	    	android:layout_weight="3"
+	    	android:layout_height="fill_parent" android:layout_width="0px"
+	    	android:orientation="vertical">
+	    	<ScrollView
+	    		android:layout_height="fill_parent"
+				android:layout_width="fill_parent">
+				<TextView
+					android:id="@+id/textMediaDetails"
+					android:text=""
+					android:layout_height="fill_parent"
+					android:layout_width="fill_parent"
+			   		android:textSize="14sp"
+			   		android:textColor="@android:color/white"
+					/>
+	   		</ScrollView>
+		   	<include layout="@layout/media_control_buttons"
+		   		android:layout_gravity="left"
+				android:layout_height="wrap_content" android:layout_width="fill_parent"/>
+		</LinearLayout>
+
+		<ImageView
+			android:id="@+id/thumbnail"
+			android:src="@drawable/remote_background"
+			android:layout_width="0px"
+			android:layout_height="fill_parent"
+			android:layout_weight="2"
+			android:scaleType="centerInside"
+			android:adjustViewBounds="true"
+			android:layout_margin="4dp"/>
 	</LinearLayout>
-		
 		
 	<include layout="@layout/messages"
    		android:layout_centerInParent="true"
