--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -16,36 +16,38 @@
 			android:maxLines="1"
 	   		android:marqueeRepeatLimit="marquee_forever"
 	   		android:ellipsize="marquee"
-	   		android:textSize="22sp"
+	   		android:textSize="20sp"
    			android:textColor="@android:color/white"/>
 	</LinearLayout>
-    <TextView
-		android:id="@+id/textNowPlayingTitle"
-		android:text=""
-		android:layout_height="wrap_content"
-		android:layout_width="fill_parent" 
-		android:gravity="center"
-		android:maxLines="1"
-   		android:marqueeRepeatLimit="marquee_forever"
-   		android:ellipsize="marquee"
-   		android:textSize="18sp"
-   		android:layout_below="@id/serverTitleLayout"
-   		android:textColor="@android:color/white"
-		/>
-	
-	<LinearLayout android:orientation="horizontal"
+    <LinearLayout android:orientation="horizontal"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:weightSum="5"
-		android:layout_below="@id/textNowPlayingTitle"
+		android:layout_below="@id/serverTitleLayout"
 		android:layout_alignParentBottom="true"
 		>
 		<LinearLayout android:id="@+id/controls_layout"
 	    	android:layout_weight="3"
 	    	android:layout_height="fill_parent" android:layout_width="0px"
-	    	android:orientation="vertical">
+	    	android:orientation="vertical"
+	    	android:layout_margin="4dp" 
+	    	android:weightSum="1">
+	    	<TextView
+				android:id="@+id/textNowPlayingTitle"
+				android:text=""
+				android:layout_height="wrap_content"
+				android:layout_width="fill_parent" 
+				android:gravity="center"
+				android:maxLines="1"
+		   		android:marqueeRepeatLimit="marquee_forever"
+		   		android:ellipsize="marquee"
+		   		android:textSize="18sp"
+		   		android:layout_below="@id/serverTitleLayout"
+		   		android:textColor="@android:color/white"
+				/>
 	    	<ScrollView
-	    		android:layout_height="fill_parent"
-				android:layout_width="fill_parent">
+	    		android:layout_height="0px"
+				android:layout_width="fill_parent"
+				android:layout_weight="1">
 				<TextView
 					android:id="@+id/textMediaDetails"
 					android:text=""
