--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,8 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_width="fill_parent" android:layout_height="wrap_content"
-   		android:layout_alignParentTop="true">
+   		android:layout_alignParentTop="true"
+   		android:layout_margin="4dp">
         <TextView android:id="@+id/serverTitle"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -16,7 +17,7 @@
 			android:maxLines="1"
 	   		android:marqueeRepeatLimit="marquee_forever"
 	   		android:ellipsize="marquee"
-	   		android:textSize="22sp"
+	   		android:textSize="20sp"
    			android:textColor="@android:color/white"/>
 	</LinearLayout>
     <TextView
