new icons (from the new Boxee version), trying the keyboard, and some play/pause icon fix

--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -3,7 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/black">
+    android:background="@drawable/background">
+    
+    <TextView android:id="@+id/keyboard_text" android:layout_centerInParent="true" android:layout_height="match_parent" android:layout_width="320dp"
+        android:visibility="invisible"/>
+    
     <LinearLayout android:id="@+id/serverTitleLayout"
         android:orientation="horizontal"
         android:gravity="center"
@@ -64,7 +68,7 @@
 
 		<ImageView
 			android:id="@+id/thumbnail"
-			android:src="@drawable/remote_background"
+			android:src="@drawable/no_media_background"
 			android:layout_width="0px"
 			android:layout_height="fill_parent"
 			android:layout_weight="2"
