--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -49,14 +49,12 @@
 		android:layout_above="@id/controls_layout"
 		android:layout_margin="4dp"
 		/>
-		
-	<EditText android:id="@+id/keyboard_text" android:layout_centerInParent="true" android:layout_height="40dp" android:layout_width="320dp"
-	    android:textSize="24dp"
+	<EditText android:id="@+id/keyboard_text" android:layout_centerInParent="true" android:layout_height="0px" android:layout_width="0px"
+	    android:textSize="0px"
 	    android:textColor="@android:color/white"
 	    android:inputType="text|textNoSuggestions"
         android:visibility="invisible"
-        android:padding="5dp"
-        android:background="@drawable/message_background"/>
+        android:padding="0px" android:layout_margin="0px"/>
     	
 	<include layout="@layout/messages"
    		android:layout_centerInParent="true"
