--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -42,17 +42,15 @@
 		   		android:marqueeRepeatLimit="marquee_forever"
 		   		android:ellipsize="marquee"
 		   		android:textSize="18sp"
-		   		android:layout_below="@id/serverTitleLayout"
 		   		android:textColor="@android:color/white"
 				/>
 	    	<ScrollView
-	    		android:layout_height="0px"
-				android:layout_width="fill_parent"
-				android:layout_weight="1">
+	    		android:layout_height="0px" android:layout_weight="1"
+				android:layout_width="fill_parent">
 				<TextView
 					android:id="@+id/textMediaDetails"
 					android:text=""
-					android:layout_height="fill_parent"
+					android:layout_height="wrap_content"
 					android:layout_width="fill_parent"
 			   		android:textSize="14sp"
 			   		android:textColor="@android:color/white"
@@ -73,7 +71,17 @@
 			android:adjustViewBounds="true"
 			android:layout_margin="4dp"/>
 	</LinearLayout>
-		
+    
+    <ImageView 
+		android:id="@+id/buttonOpenKeyboard"
+		android:layout_height="40dp" 
+		android:layout_width="40dp"
+		android:src="@drawable/button_keyboard_on"
+		android:scaleType="centerInside"  
+		android:layout_margin="3dp"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentBottom="true"/>
+    
     <EditText android:id="@+id/keyboard_text" android:layout_centerInParent="true" android:layout_height="0px" android:layout_width="0px"
 	    android:textSize="0px"
 	    android:textColor="@android:color/white"
