--- a/res/layout/nowplaying.xml
+++ b/res/layout/nowplaying.xml
@@ -8,9 +8,9 @@
 	android:layout_width="wrap_content">
 		
 	<LinearLayout android:layout_height="wrap_content" 
-	android:layout_width="wrap_content"
+	android:layout_width="fill_parent"
 	android:orientation="horizontal"
-	android:weightSum="6">
+	android:weightSum="4">
 		<ImageView 
 			android:id="@+id/buttonSmallSkipBack"
 			android:layout_height="wrap_content" 
