--- a/res/layout/nowplaying.xml
+++ b/res/layout/nowplaying.xml
@@ -53,6 +53,8 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:padding="5dp"
+	android:focusable="true" android:focusableInTouchMode="true"
+	android:clickable="true" 
 	>
 
 	<ProgressBar 
@@ -67,7 +69,6 @@
 	
 	<TextView
 		android:id="@+id/textElapsed"
-		android:text="time"
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content" 
 		android:layout_below="@id/progressTimeBar"
@@ -77,7 +78,6 @@
 	
 	<TextView
 		android:id="@+id/textDuration"
-		android:text="duration"
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content" 
 		android:layout_below="@id/progressTimeBar"
