--- a/res/layout-land/nowplaying.xml
+++ b/res/layout-land/nowplaying.xml
@@ -70,7 +70,9 @@
 	android:id="@+id/layoutTimeBar" 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
-	android:padding="5dp"
+	android:padding="5dp" 
+	android:focusable="true" android:focusableInTouchMode="true"
+	android:clickable="true" 
 	>
 
 	<ProgressBar 
