--- a/res/layout-large/nowplaying.xml
+++ b/res/layout-large/nowplaying.xml
@@ -71,6 +71,8 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:padding="5dp"
+	android:focusable="true" android:focusableInTouchMode="true"
+	android:clickable="true" 
 	>
 
 	<ProgressBar 
